Bug 780878 - Check app permission against ALLOW_NO_WARN. r=honzab

Without this checking, nsOfflineCacheUpdateService don't update
offline cache any more if previous updating exceeds usage and showing
a warning.